# jirac

./: .gitignore  README.md  __init__.py  setup.cfg
examples/: show-issue-info  show-issues-assignee-as-none-using-component  show-issues-assignee-as-none-using-keyword  show-issues-epic-link-as-none-using-component  show-issues-story-points-not-set-using-component  show-issues-without-component  shows-issues-sprint-not-set  shows-issues-sprint-not-set-using-component
