[metadata]
name = jirac
version = 0.1.0
description = A Python utility for interacting with Jira issues.
author='Douglas Schilling Landgraf',
author_email='dougsland@redhat.com',
url='https://github.com/dougsland/jirac',
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Version 2
    Operating System :: OS Independent
python_requires = >=3.9
install_requires =
    requests
    jira

[options]
packages = find:
include_package_data = True
